<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Back" />

    <!-- Edit Comment Text -->
    <EditText
        android:id="@+id/editCommentEditText"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:hint="Edit your comment"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="top"
        android:backgroundTint="@color/gray" />

    <!-- Edit Rating Bar -->
    <RatingBar
        android:id="@+id/editCommentRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="3.5"
        app:layout_constraintTop_toBottomOf="@id/editCommentEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Update Comment Button -->
    <Button
        android:id="@+id/updateCommentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Comment"
        app:layout_constraintTop_toBottomOf="@id/editCommentRatingBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Delete Comment Button -->
    <Button
        android:id="@+id/deleteCommentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete Comment"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/editCommentRatingBar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
